<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="@drawable/main_wallpaper"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/topLogo"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_vertical"
            android:layout_margin="3dip"
            android:src="@drawable/t411" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_margin="3dip"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/button_useraccount"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
    </LinearLayout>
    
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/main_wallpaper"
        android:gravity="center_vertical"
        android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/input_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/main_login"
            android:width="200dip" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/input_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/main_password"
            android:inputType="textPassword"
            android:width="200dip" />

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/t411_btn"
            android:minWidth="120dip"
            android:padding="10dip"
            android:text="@string/main_connect"
            android:textColor="#ffffff" />
    </LinearLayout>
    
    </LinearLayout>

</LinearLayout>
