
    <LinearLayout android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF"
        android:focusable="true"
        android:descendantFocusability="beforeDescendants"
		android:focusableInTouchMode="true"
        android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dip"
            android:background="#000"
            android:focusableInTouchMode="true"
            android:nextFocusRight="@id/ImageView02" >

            <ImageView
                android:id="@+id/topLogo"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:layout_margin="3dip"
                android:text="@string/service_settings"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/btnStartService"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="@drawable/t411_btn" >

                    <ImageView
                        android:id="@+id/ImageView01"
                        android:layout_width="28dp"
                        android:layout_height="28dip"
                        android:layout_margin="4dip"
                        android:src="@drawable/ic_update" />

                    <TextView
                        android:id="@+id/TextView06"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:text="@string/update_now"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnWidgetAction"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="@drawable/t411_btn" >

                    <ImageView
                        android:id="@+id/ImageView02"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_margin="4dip"
                        android:src="@drawable/ic_touch" />

                    <TextView
                        android:id="@+id/TextView04"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:text="@string/widget_action"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <CheckBox
                        android:id="@+id/checkBox0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/repeatTime"
                        android:textColor="#ff000000"
                        android:checked="true"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/field_frequency"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="right"
                        android:inputType="number|numberDecimal"
                        android:text="15" >
                    </EditText>

                </LinearLayout>

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="46dip"
                    android:layout_weight="1"
                    android:text="@string/description_frequency"
                    android:textColor="#ff888888"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="#33000000"
                    android:width="150dip" >
                </FrameLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/chk_ratioAlert"
                        android:textColor="#ff000000"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editText1"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="right"
                        android:inputType="number|numberDecimal"
                        android:text="0.75" > 
                    </EditText>

                </LinearLayout>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="46dip"
                    android:layout_weight="1"
                    android:text="@string/description_ratioAlert"
                    android:textColor="#ff888888"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_margin="3dip"
                    android:background="#33000000"
                    android:width="150dip" >

                </FrameLayout>

                <CheckBox
                    android:id="@+id/checkBox2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="#ff000000"
                    android:text="@string/chk_msgAlert" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="46dip"
                    android:layout_weight="1"
                    android:text="@string/description_mailAlert"
                    android:textColor="#ff888888"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="#33000000"
                    android:width="150dip" >
                </FrameLayout>

                <CheckBox
                    android:id="@+id/checkBox3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:textColor="#ff000000"
                    android:text="@string/show_notifs" />

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="46dip"
                    android:layout_weight="1"
                    android:text="@string/description_notifSystem"
                    android:textColor="#ff888888"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="#33000000"
                    android:width="150dip" >
                </FrameLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
