
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/main_wallpaper"
        android:orientation="vertical" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/t411" />

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:text="@string/app_name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/appVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="App version"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#66ffffff" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/considerDonate"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:id="@+id/paypal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dip"
            android:background="@drawable/paypal"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dip"
                android:layout_weight="0.48"
                android:gravity="center"
                android:text="@string/donate"
                android:textColor="#FF000000"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>
