
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/main_wallpaper"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#000000" >

           <ImageView
               android:id="@+id/topLogo"
               android:layout_width="44dp"
               android:layout_height="44dp"
               android:layout_gravity="center_vertical"
               android:layout_margin="3dip"
               android:src="@drawable/t411" />

           <TextView
               android:id="@+id/TextView01"
               android:layout_width="wrap_content"
               android:layout_height="fill_parent"
               android:layout_margin="3dip"
               android:layout_weight="1"
               android:gravity="center_vertical"
               android:text="@string/app_name"
               android:textAppearance="?android:attr/textAppearanceLarge"
               android:textColor="#FFFFFF" />

           <LinearLayout
               android:id="@+id/btnHomeUpdate"
               android:layout_width="44dp"
               android:layout_height="43dp"
               android:layout_margin="3dip"
                >

               <ImageView
                   android:id="@+id/ImageView01"
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent"
                   android:layout_margin="4dip"
                   android:gravity="center"
                   android:src="@drawable/ic_update" />
           </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dip"
                android:layout_marginRight="15dip"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/hLogin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Username"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/hMails"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="(?)"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/hUpDown"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="upload / download"
                            android:textAppearance="?android:attr/textAppearanceMedium" />

                        <TextView
                            android:id="@+id/hRatio"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Ratio"
                            android:textAppearance="?android:attr/textAppearanceMedium" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnMails"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:background="@drawable/t411_btn"
                    android:focusable="true" >

                    <ImageView
                        android:id="@+id/ImageView02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dip"
                        android:src="@drawable/ic_readmail" />

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:text="@string/button_mail"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnUseraccount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:background="@drawable/t411_btn"
                    android:focusable="true" >

                    <ImageView
                        android:id="@+id/ImageView03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dip"
                        android:src="@drawable/ic_useraccount" />

                    <TextView
                        android:id="@+id/TextView03"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:text="@string/button_useraccount"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnService"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:background="@drawable/t411_btn"
                    android:focusable="true" >

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dip"
                        android:src="@drawable/ic_service" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:text="@string/button_service"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout01"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dip"
                    android:layout_weight="1"
                    android:background="@drawable/t411_btn"
                    android:focusable="true" >

                    <ImageView
                        android:id="@+id/ImageView04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dip"
                        android:src="@drawable/ic_about" />

                    <TextView
                        android:id="@+id/TextView04"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:text="@string/about"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>
